[package]
name = "lambda"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_http = "0.14.0"
openssl = { version = "0.10.71", features = ["vendored"] }
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
tokio = { version = "1.43.0", features = ["macros"] }
