[package]
name = "lambda"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_http = "0.14.0"
openssl = { version = "0.10.72", features = ["vendored"] }
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["macros"] }
